--- a/src/style/hand.module.scss
+++ b/src/style/hand.module.scss
@@ -3,4 +3,8 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+
+    div:not(:first-child) {
+        margin-left: -50px;
+    }
 }
