--- a/src/style/hand.module.scss
+++ b/src/style/hand.module.scss
@@ -1,10 +1,15 @@
 
 .hand {
+    width: 100%;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    bottom: -50px;
 
     div:not(:first-child) {
-        margin-left: -50px;
+        margin-left: -40px;
     }
 }
