Replace colors with new ones

--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -1,5 +1,6 @@
-$green: #345830;
-$white: #FFF5EB;
-$black: #291F1E;
-$red: #F6423C;
-$blue: #2A78CB;
+$black: #070707;
+$white: #009DDC;
+
+$red: #EFF9F0;
+$green: #F64740;
+$blue: #009B72;
