Fix color names

--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -1,6 +1,6 @@
-$black: #070707;
-$white: #009DDC;
+$black:#070707;
+$white:#EFF9F0;
 
-$red: #EFF9F0;
-$green: #F64740;
-$blue: #009B72;
+$red: #F64740;
+$green: #009B72;
+$blue: #009DDC;
