--- a/src/style/landingpage.module.scss
+++ b/src/style/landingpage.module.scss
@@ -1,5 +1,6 @@
 @import 'variables';
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@700&display=swap');
 
 .container {
   margin: 0 auto;
@@ -10,63 +11,20 @@
   .header {
     position: relative;
     width: 100%;
-    height: 40vh;
+    height: 50vh;
     display: flex;
     justify-content: center;
     align-items: center;
+    background:
+      linear-gradient(135deg, $blue 21px, #0ABAFF 22px, #0ABAFF 24px,
+        transparent 24px, transparent 67px, #0ABAFF 67px, #0ABAFF 69px,
+          transparent 69px),
+      linear-gradient(225deg, $blue 21px, #0ABAFF 22px, #0ABAFF 24px,
+        transparent 24px, transparent 67px, #0ABAFF 67px, #0ABAFF 69px,
+          transparent 69px) 0 64px; // Tiled background pattern
 
-    &::before {
-      content: '';
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: linear-gradient(45deg, #f75550, #EA120B);
-      border-radius: 0 0 50% 50% / 0 0 100% 100%;
-      transform: scale(1.5);
-    }
-
-    .navbarContainer {
-      position: absolute;
-      top: 0;
-      left: 0;
-      z-index: 2;
-      width: 100%;
-      height: 100px;
-
-      .navbar {
-        float: right;
-        margin-right: 5px;
-        list-style: none;
-
-        li {
-          display: inline-block;
-          margin-right: 5px;
-
-          a {
-            display: block;
-            padding: 0.5em 1em;
-            transition: all 0.1s ease;
-            font-size: 1.5em;
-            background: rgba(51, 51, 51, 0.1);
-            border-radius: 5px;
-            color: $white;
-            text-decoration: none;
-
-            &:hover {
-              box-shadow: inset 0 0 2px #333;
-              background: rgba(51, 51, 51, 0.1);
-            }
-
-            &:active {
-              box-shadow: inset 0 0 4px #333;
-              background: rgba(51, 51, 51, 0.2);
-            }
-          }
-        }
-      }
-    }
+    background-color: $blue;
+    background-size: 64px 128px;
 
     h1 {
       position: relative;
@@ -75,6 +33,65 @@
       max-width: 1200px;
       font-size: 6em;
       color: $white;
+      text-align: center;
+    }
+
+    p {
+      position: relative;
+      z-index: 1;
+      margin: 0 auto;
+      max-width: 1200px;
+      font-size: 2em;
+      color: $white;
+      text-align: center;
+      font-family: 'Roboto Slab', serif;
+
+      span {
+        color: $red;
+        text-shadow: 0 0 5px $white;
+      }
     }
   }
+
+  .content {
+    position: relative;
+    width: 100%;
+    height: 50vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: $white;
+
+    .startButton {
+      padding: 5px 8px;
+      border-radius: 4px;
+      transform: scale(4);
+      background: $red;
+      transition: all .2s ease-in-out;
+      box-shadow: inset 0 0 1px #E9170C;
+
+      span {
+        font-family: 'Roboto Slab', serif;
+        margin-left: 8px;
+        color: white;
+      }
+
+      svg {
+        transition: all .2s ease-in-out;
+        color:white;
+      }
+
+      &:hover {
+        transform: scale(5);
+
+        svg {
+          transform: scale(1.5);
+        }
+      }
+    }
+  }
+}
+
+a {
+  text-decoration: none;
 }
