--- a/src/style/landingpage.module.scss
+++ b/src/style/landingpage.module.scss
@@ -26,6 +26,16 @@
     background-color: $blue;
     background-size: 64px 128px;
 
+    /* Shadow on bottom of header */
+    &::before {
+      content: '';
+      position: absolute;
+      width: 100%;
+      height: 10px;
+      bottom: 0;
+      background: linear-gradient(0deg, rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.1) 40%, transparent);
+    }
+
     h1 {
       position: relative;
       z-index: 1;
@@ -60,7 +70,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background: $white;
+    
+    background-color: $white;
 
     .startButton {
       padding: 5px 8px;
