--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -5,5 +5,10 @@ $red: #F64740;
 $green: #009B72;
 $blue: #00AFF5;
 
+$darkBlue: #054A91;
+$lightGreen: #23CE6B;
+
+$yellow: #F0A202;
+
 $lato: 'Lato', sans-serif;
 $roboto: 'Roboto Slab', serif;
