Disable pointer events on disabled card

--- a/src/style/card.module.scss
+++ b/src/style/card.module.scss
@@ -3,7 +3,8 @@
     flex: 1;
 
     &.disabled {
-
+        pointer-events: none;
+        
         .card {
             filter: brightness(90%);
         }
