--- a/src/style/card.module.scss
+++ b/src/style/card.module.scss
@@ -15,6 +15,7 @@
     }
 
     .card {
+        max-width: 150px;
         z-index: 1;
         width: 100%;
         filter: drop-shadow(0 0 6px rgba(0, 0, 0, 0.5));
