--- a/src/style/chat.module.scss
+++ b/src/style/chat.module.scss
@@ -1,26 +1,46 @@
+@import './variables';
+
 .wrapper {
-    margin: 10px;
-    padding: 5px;
+    position: relative;
+    margin: 1em;
     border: 1px solid gray;
     border-radius: 2px;
 
-    overflow: scroll;
-    
-    pre {
-        // #IRC
-        margin: 0;
-        padding: 0;
+    display: flex;
+    flex-direction: column;
+
+    height: 200px;
+
+    .history {
+        max-height: 90%;
+
+        overflow-y: scroll;
+
+        pre {
+            // #IRC
+            margin: 0;
+            font-size: 1.5em;
+        }
     }
 
 }
 
 .inputRow {
+    width: 100%;
+    bottom: 0;
 
-    pre {
-        display: inline;
-    }
+    label {
+        display: flex;
+        width: 100%;
 
-    input {
-        //border: none;
+        p {
+            margin: 0;
+            padding: 0 1em 0 0;
+            min-width: fit-content;
+        }
+
+        input {
+            width: 100%;
+        }
     }
 }
