Major game screen redesign

--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -1,14 +1,13 @@
 $black: #070707;
 $white: #F6F8FF;
 
+$darkGrey: #474747;
+
 $red: #F64740;
-$green: #009B72;
+$green: #23CE6B;
 $blue: #00AFF5;
 
-$darkBlue: #054A91;
-$lightGreen: #23CE6B;
-
-$yellow: #F0A202;
+$yellow: #FFD447; // TODO: find something better
 
 $lato: 'Lato', sans-serif;
 $roboto: 'Roboto Slab', serif;
