--- a/src/style/chat.module.scss
+++ b/src/style/chat.module.scss
@@ -2,15 +2,17 @@
 
 .wrapper {
   box-sizing: border-box;
-  width: 400px;
-  height: 200px;
-  background: linear-gradient(25deg, rgba(35, 206, 107, 0.1), rgba(155, 230, 110, 0.1));
+  width: 100%;
+  height: 100%;
+  background: rgba(255, 255, 255, 0.5);
+  border-radius: 5px;
 
   display: flex;
   flex-direction: column;
 
   >.history {
-    overflow-y: scroll;
+    overflow-y: auto;
+    padding: 0.25em;
 
     >div {
       display: flex;
@@ -18,12 +20,12 @@
 
       >p, >span {
         margin: 0;
-        padding: 0.1em 0.25em;
-        font-size: 1.2em;
+        padding: 0.2em 0.25em;
+        font-size: 1.1em;
       }
 
       >span {
-        font-weight: bold;
+        font-family: $roboto;
       }
     }
 
@@ -53,7 +55,7 @@
       box-sizing: border-box;
       width: 100%;
       padding: 0.25em;
-      font-size: 1.2em;
+      font-size: 1.1em;
     }
   }
 }
