--- a/src/style/hand.module.scss
+++ b/src/style/hand.module.scss
@@ -1,12 +1,10 @@
 
 .hand {
-    width: 100%;
-    position: absolute;
-    bottom: -50px;
+    margin: 0 auto;
+    width: 90%; // Prevent left/right most cards from going off-screen (even when not hovered)
 
-    .container {
+    .wrapper {
         margin: 0 auto;
-        width: 90%;
         display: flex;
         flex-direction: row;
         flex-wrap: nowrap;
