--- a/src/style/table.module.scss
+++ b/src/style/table.module.scss
@@ -1,17 +1,11 @@
 @import './variables';
 
 .table {
-  position: relative;
-  margin: 100px auto;
-  width: 40%;
-  border: 1px solid $black;
+  box-sizing: border-box;
+  position: absolute;
+  width: 100%;
+  height: 100%;
   display: flex;
-  flex-direction: row;
   justify-content: center;
-  align-items: center;
-
-  >div {
-    max-width: 100px;
-    padding: 2em;
-  }
+  flex-direction: row;
 }
