Change color scheme

--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -1,13 +1,11 @@
 $black: #070707;
-$white: #F6F8FF;
+$white: #F6F3EE;
+
+$red: #F86863;
+$blue: #1FBCFF;
 
 $darkGrey: #474747;
-
-$red: #F64740;
-$green: #23CE6B;
-$blue: #00AFF5;
-
-$yellow: #FFD447; // TODO: find something better
+$lightBlue: #99E0FF;
 
 $lato: 'Lato', sans-serif;
 $roboto: 'Roboto Slab', serif;
