--- a/src/style/elements/toggle.module.scss
+++ b/src/style/elements/toggle.module.scss
@@ -46,7 +46,7 @@
       font-size: 1.5em;
       text-transform: uppercase;
       padding-left: 10px;
-      background-color: $green;
+      background-color: green; // TODO
       color: #fff;
     }
   }
