--- a/src/style/game.module.scss
+++ b/src/style/game.module.scss
@@ -20,7 +20,7 @@ $chat-wrapper-height: calc(#{$container-height} - #{$scoreboard-height});
     width: 100%;
     z-index: 100;
     height: $header-height;
-    background: rgba(255, 255, 255, 0.7);
+    background: rgba(255, 255, 255, 1);
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
     display: flex;
 
@@ -30,7 +30,7 @@ $chat-wrapper-height: calc(#{$container-height} - #{$scoreboard-height});
       width: $sidebar-width;
       text-align: center;
       line-height: $header-height;
-      color: $red;
+      color: $blue;
     }
 
     p {
@@ -60,7 +60,7 @@ $chat-wrapper-height: calc(#{$container-height} - #{$scoreboard-height});
 
     .sidebar {
       width: $sidebar-width;
-      background: $blue;
+      background: $lightBlue;
 
       .scoreboardWrapper {
         box-sizing: border-box;
@@ -80,7 +80,7 @@ $chat-wrapper-height: calc(#{$container-height} - #{$scoreboard-height});
       width: $game-width;
       background: $white;
       height: 100%;
-      background: $green;
+      background: $white;
       box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
 
       .gameContainer {
