--- a/src/style/playerBox.module.scss
+++ b/src/style/playerBox.module.scss
@@ -4,7 +4,7 @@
   box-sizing: border-box;
   width: 100%;
   height: 100%;
-  background: rgba(255, 255, 255, 0.5);
+  background: $red;
   border-radius: 5px;
 
   transition: all 0.2s ease-in-out;
@@ -14,13 +14,14 @@
     font-size: 1.4em;
     padding: 0.25em 0.75em 0.25em 0.75em;
     text-align: center;
+    color: $white;
 
     &:first-of-type {
       font-family: $roboto;
     }
 
     &:nth-of-type(2) {
-      border-top: 2px solid $green;
+      border-top: 2px solid $white;
     }
   }
 }
