--- a/src/style/chat.module.scss
+++ b/src/style/chat.module.scss
@@ -12,8 +12,7 @@
   display: flex;
   flex-direction: column;
 
-  >.history {
-    overflow-y: auto;
+  .history {
     padding: 0.25em;
 
     >div {
@@ -36,8 +35,6 @@
         color: $darkGrey;
       }
     }
-
-    /* TODO: Prettier scrollbar...ew */
   }
 
   >.inputRow {
