--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -7,5 +7,7 @@ $blue: #1FBCFF;
 $darkGrey: #474747;
 $lightBlue: #99E0FF;
 
+$translucentWhite: rgba(255, 255, 255, 0.5);
+
 $lato: 'Lato', sans-serif;
 $roboto: 'Roboto Slab', serif;
