--- a/src/style/chat.module.scss
+++ b/src/style/chat.module.scss
@@ -4,7 +4,7 @@
   box-sizing: border-box;
   width: 100%;
   height: 100%;
-  background: rgba(255, 255, 255, 0.5);
+  background: $translucentWhite;
   border-radius: 5px;
 
   overflow: hidden; // Otherwise input background overflows and fucks up border-radius
