--- a/src/style/scoreboard.module.scss
+++ b/src/style/scoreboard.module.scss
@@ -6,7 +6,7 @@ $borderThin: 1px solid $lightBlue;
 .scoreboard {
   width: 100%;
   height: 100%;
-  background: rgba(255, 255, 255, 0.5);
+  background: $translucentWhite;
   border-radius: 5px;
   text-align: center;
 
