--- a/src/style/playerBox.module.scss
+++ b/src/style/playerBox.module.scss
@@ -6,8 +6,15 @@
   height: 100%;
   background: $red;
   border-radius: 5px;
+  overflow: hidden;
 
   transition: all 0.2s ease-in-out;
+
+  &.active {
+    p:first-of-type {
+      background: $blue;
+    }
+  }
 
   p {
     margin: 0;
