--- a/src/index.css
+++ b/src/index.css
@@ -4,13 +4,9 @@
 body {
   margin: 0;
   padding: 0;
-  overflow: hidden;
   font-family: 'Lato', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+@import-normalize
