--- a/src/domain/Game/Game/style.module.scss
+++ b/src/domain/Game/Game/style.module.scss
@@ -14,6 +14,7 @@ $chat-wrapper-height: calc(#{$container-height} - #{$scoreboard-height});
   position: relative;
   height: 100vh;
   width: 100vw;
+  overflow: hidden;
 
   .header {
     position: absolute;
