--- a/src/domain/Game/Table/style.module.scss
+++ b/src/domain/Game/Table/style.module.scss
@@ -8,4 +8,10 @@
   display: flex;
   justify-content: center;
   flex-direction: row;
+
+  .card{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+  }
 }
