--- a/src/domain/Game/Talon/style.module.scss
+++ b/src/domain/Game/Talon/style.module.scss
@@ -7,20 +7,38 @@
 .cardGroup {
     padding: 10px;
     margin: 10px;
-    border: 1px solid black;
     border-radius: 5px;
     cursor: pointer;
 
     &:hover {
         box-shadow: 0 0 5px black;
     }
+
 }
 
 
-.card {
-    padding: 10px;
-    margin: 10px;
-    border: 1px solid black;
-    border-radius: 5px;
+.selected {
+    border: 2px solid black;
+    color: black;
+    .card {
+        padding: 10px;
+        margin: 10px;
+        border: 2px solid black;
+        border-radius: 5px;
+    }
 }
+
+.notselected {
+    border: 2px solid gray;
+    color: gray;
+    .card {
+        padding: 10px;
+        margin: 10px;
+        border: 2px solid gray;
+        border-radius: 5px;
+    }
+}
+
+
+
 
