--- a/src/domain/GameScreen/Talon/style.module.scss
+++ b/src/domain/GameScreen/Talon/style.module.scss
@@ -11,7 +11,7 @@
     transition: all .2s ease-in-out;
 
     >img {
-      transition: margin .2s ease-in-out;
+      transition: all .2s ease-in-out;
       filter: drop-shadow(0 0 2px rgba(0, 0, 0, 0.5));
 
       &:not(:first-child) {
@@ -21,12 +21,12 @@
 
     &:hover {
       cursor: pointer;
-      
+
       transform: scale(1.1);
-      filter: drop-shadow(0 0 4px rgba(0, 0, 0, 0.5));
 
       >img:not(:first-child) {
         margin-left: -10px;
+        filter: drop-shadow(0 0 4px rgba(0, 0, 0, 0.5));
       }
     }
 
