--- a/src/domain/GameScreen/Hand/style.module.scss
+++ b/src/domain/GameScreen/Hand/style.module.scss
@@ -1,3 +1,5 @@
+@import '../../../variables';
+
 .wrapper {
   width: 100%;
   margin-bottom: -50px;
@@ -8,19 +10,31 @@
   align-items: center;
   justify-content: center;
 
-  >img {
-    filter: drop-shadow(0 0 3px rgba(0, 0, 0, 0.5));
-    transition: all .1s ease-in-out;
-
+  .cardWrapper {
+    //border-top: 3px dotted red;
     &:not(:first-child) {
       margin-left: -50px;
     }
 
-    &:hover {
-      cursor: pointer;
-      transform-origin: bottom right;
-      transform: scale(1.25);
-      filter: drop-shadow(0 0 6px rgba(0, 0, 0, 0.5));
+    .disabled {
+      filter: brightness(80%);
+
+      &:hover {
+        filter: brightness(85%);
+      }
+    }
+
+    >img {
+      transform-origin: center;
+      filter: drop-shadow(0 0 3px rgba(0, 0, 0, 0.5));
+      transition: all .1s ease-in-out;
+  
+      &:hover {
+        cursor: pointer;
+        transform-origin: bottom right;
+        transform: scale(1.25);
+        filter: drop-shadow(0 0 6px rgba(0, 0, 0, 0.5));
+      }
     }
   }
 }
