--- a/src/components/Home/style.module.scss
+++ b/src/components/Home/style.module.scss
@@ -2,8 +2,9 @@
 
 .container {
   margin: 0 auto;
-  height: 100vh;
+  min-height: 100vh;
   background-color: $white;
+  overflow: hidden;
 
   >header {
     position: relative;
@@ -66,43 +67,73 @@
     
   }
 
-  >main {
-    position: relative;
-    width: 100%;
-    height: 38vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    
+  .handContainer {
+    padding-top: 8em;
     background-color: $white;
 
-    .startButton {
-      padding: 5px 8px;
-      border-radius: 4px;
-      transform: scale(4);
-      background: $red;
-      transition: all .2s ease-in-out;
-      box-shadow: inset 0 0 1px #E9170C;
+    &:nth-of-type(2) {
+      padding-top: 3em;
+    }
+  }
 
-      span {
-        font-family: $roboto;
-        margin-left: 8px;
-        color: white;
-      }
+  .section {
+    box-sizing: border-box;
+    width: 100%;
+    padding: 1em 0;
+    position: relative;
+    background: $white;
+  }
 
-      svg {
-        transition: all .2s ease-in-out;
-        color:white;
-      }
+  .textContainer {
+    margin: 0 auto;
+    max-width: 1200px;
+  }
+
+  .valati {
+    text-align: center;
+    color: $red;
+  }
+
+  .berac {
+    color: $darkGrey;
+    text-align: center;
+
+    span {
+      color: $blue;
+
+      border-bottom: 4px solid $darkGrey;
 
       &:hover {
-        transform: scale(5);
+        cursor: pointer;
 
-        svg {
-          transform: scale(1.5);
-        }
+        border-bottom: 4px solid $blue;
       }
     }
+  }
+
+  .rooms {
+    margin: 0 auto;
+    max-width: 1200px;
+    padding-bottom: 20em;
+
+    h2 {
+      text-align: center;
+      color: $darkGrey;
+    }
+  }
+
+  footer {
+    box-sizing: border-box;
+    width: 100%;
+    padding: 3em 0;
+    position: relative;
+    background: $darkGrey;
+    color: $white;
+  }
+
+  h2 {
+    font-size: 3em;
+    font-family: $roboto;
   }
 
   a {
