--- a/src/domain/Lobby/Rooms/rooms.module.scss
+++ b/src/domain/Lobby/Rooms/rooms.module.scss
@@ -7,8 +7,8 @@
     .item {
         border: 1px solid gray;
         border-radius: 3px;
-        margin: 10px;
         padding: 10px;
+        margin-right: 10px;
 
         &:hover {
             box-shadow: 0 0 5px black;
