Start frontend overhaul

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -1,5 +1,8 @@
-$black: #070707;
-$white: #F6F3EE;
+$black: #000000;
+$white: #FFFFFF;
+
+$dark: #070707;
+$light: #F6F3EE;
 
 $red: #F86863;
 $blue: #1FBCFF;
@@ -8,6 +11,7 @@ $darkGrey: #474747;
 $lightBlue: #99E0FF;
 
 $translucentWhite: rgba(255, 255, 255, 0.5);
+$translucentBlack: rgba(0, 0, 0, 0.5);
 
 $lato: 'Lato', sans-serif;
 $roboto: 'Roboto Slab', serif;
