Design Landing Page

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -7,6 +7,9 @@ $light: #F6F3EE;
 $red: #F86863;
 $blue: #1FBCFF;
 
+$mint: #F7FFF7;
+$yellow: #FFE66D;
+
 $darkGrey: #474747;
 $lightBlue: #99E0FF;
 
