--- a/src/components/LandingPage/LandingPage.module.scss
+++ b/src/components/LandingPage/LandingPage.module.scss
@@ -4,3 +4,39 @@
   background: $light;
   height: 100vh;
 }
+
+.card {
+  margin: auto;
+}
+
+.textBox {
+  font-family: $roboto;
+  text-align: center;
+  margin-top: 50px;
+
+  h2 {
+    margin: 0;
+    font-size: 3em;
+
+    &:first-child {
+      color: $red;
+      padding-bottom: 1em;
+    }
+
+    &:nth-child(2) {
+      color: $darkGrey;
+
+      a {
+        transition: all .2s ease-in-out;
+        text-decoration: none;
+        color: $blue;
+        border-bottom: 5px solid $darkGrey;
+
+        &:hover {
+          color: $darkGrey;
+          border-bottom: 5px solid $blue;
+        }
+      }
+    }
+  }
+}
