--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -20,15 +20,14 @@ $height: 60px;
   font-size: 2.8em;
   font-family: $roboto;
   display: inline-block;
-  color: $red;
+  color: $blue;
+  transition: all .2s ease-in-out;
 
   .slogan {
-    transition: opacity .75s ease-in-out;
     margin-left: 5px;
     padding-left: 5px;
     display: inline-block;
     font-size: 0.4em;
-    opacity: 0.1;
 
     border-left: 2px solid $red;
 
@@ -41,11 +40,7 @@ $height: 60px;
   }
 
   &:hover {
-    color: $blue;
-
-    .slogan {
-      opacity: 0.9;
-    }
+    color: $darkGrey;
   }
 }
 
@@ -69,7 +64,7 @@ $height: 60px;
       padding: 0 1em;
 
       &:hover {
-        color: $red;
+        color: $darkGrey;
       }
     }
   }
