--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -53,13 +53,14 @@ $height: 60px;
 
   li {
     a {
+      text-transform: uppercase;
       display: block;
 
       font-size: 1.5em;
       font-family: $roboto;
       text-decoration: none;
 
-      color: $blue;
+      color: $red;
       
       padding: 0 1em;
 
