--- a/src/components/Pages/LandingPage/LandingPage.module.scss
+++ b/src/components/Pages/LandingPage/LandingPage.module.scss
@@ -2,7 +2,7 @@
 
 .wrapper {
   background: $light;
-  height: 100vh;
+  height: 100%;
 }
 
 .card {
@@ -17,25 +17,25 @@
   h2 {
     margin: 0;
     font-size: 3em;
+    color: $red;
+    padding-bottom: 1em;
+  }
 
-    &:first-child {
-      color: $red;
-      padding-bottom: 1em;
-    }
+  h1 {
+    margin: 0;
+    font-size: 3.5em;
 
-    &:nth-child(2) {
-      color: $darkGrey;
+    color: $darkGrey;
 
-      a {
-        transition: all .2s ease-in-out;
-        text-decoration: none;
-        color: $blue;
-        border-bottom: 5px solid $darkGrey;
+    a {
+      transition: all .2s ease-in-out;
+      text-decoration: none;
+      color: $blue;
+      border-bottom: 5px solid $darkGrey;
 
-        &:hover {
-          color: $darkGrey;
-          border-bottom: 5px solid $blue;
-        }
+      &:hover {
+        color: $darkGrey;
+        border-bottom: 5px solid $blue;
       }
     }
   }
