--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@700&display=swap');
 
-body {
+html, body {
+  height: 100%;
   margin: 0;
   padding: 0;
-  font-family: 'Lato', sans-serif;
+}
+
+body {
+  font-family: 'Roboto Slab', serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+#root {
+  height: 100%;
 }
 
 @import-normalize
