--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@ html, body {
 }
 
 body {
-  font-family: 'Roboto Slab', serif;
+  font-family: 'Lato', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
