--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -28,6 +28,7 @@ $height: 60px;
     padding-left: 5px;
     display: inline-block;
     font-size: 0.4em;
+    text-align: left;
 
     border-left: 2px solid $red;
 
@@ -68,5 +69,15 @@ $height: 60px;
         color: $darkGrey;
       }
     }
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .container {
+    text-align: center;
+  }
+
+  .navigation {
+    float: none;
   }
 }
