--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,8 @@ body {
   font-family: 'Lato', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  background-color: #F6F3EE;
 }
 
 #root {
