--- a/src/components/Lobby/Lobby.module.scss
+++ b/src/components/Lobby/Lobby.module.scss
@@ -14,6 +14,19 @@
   }
 }
 
+.joinCard {
+  p {
+    text-transform: uppercase;
+    color: $blue;
+  }
+
+  &:hover {
+    p {
+      color: $darkGrey;
+    }
+  }
+}
+
 @media only screen and (max-width: 768px) {
   .lobbyContainer {
     flex-wrap: wrap;
