--- a/src/components/Pages/GamePage/GamePage.module.scss
+++ b/src/components/Pages/GamePage/GamePage.module.scss
@@ -1,21 +1,82 @@
+@import '../../../variables';
+
 .wrapper {
   height: 100%;
   overflow: hidden;
 
   .container {
     height: calc(100% - 62px); // Header height = 60px, +2px border-bottom
-    display: flex;
-    flex-direction: column;
-    align-content: stretch;
 
     .gameContainer {
       flex-grow: 1;
+      height: 100%;
+
+      display: grid;
+      grid-template-columns: 1.5fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr; 
+      grid-template-rows: 0.5fr 1fr 0.5fr 1fr 1fr 1fr; 
+      gap: 0px 0px;
+      grid-auto-flow: row;
+      grid-template-areas:
+        "SidebarArea TopLeftPlayer . . TopPlayer . . TopRightPlayer"
+        "SidebarArea . GameArea GameArea GameArea GameArea GameArea ."
+        "SidebarArea LeftPlayer GameArea GameArea GameArea GameArea GameArea RightPlayer"
+        "SidebarArea . GameArea GameArea GameArea GameArea GameArea ."
+        "SidebarArea . GameArea GameArea GameArea GameArea GameArea ."
+        "SidebarArea . GameArea GameArea GameArea GameArea GameArea .";
+    }
+    
+    .SidebarArea {
+      grid-area: SidebarArea;
+
+      margin-right: 1em;
+      padding: 0.5em;
+      background: $lightBlue;
     }
 
-    .handContainer {
-      border-top: 4px dotted red;
+    .TopLeftPlayer, .TopPlayer, .TopRightPlayer {
+      margin-top: 1em;
+    }
+
+    .TopRightPlayer, .RightPlayer {
+      margin-right: 1em;
+    }
+
+    .TopLeftPlayer {
+      grid-area: TopLeftPlayer;
+    }
+    
+    .TopPlayer {
+      grid-area: TopPlayer;
+    }
+
+    .TopRightPlayer {
+      grid-area: TopRightPlayer;
+    }
+    
+    .LeftPlayer {
+      grid-area: LeftPlayer;
+    }
+    
+    .RightPlayer {
+      grid-area: RightPlayer;
+    }
+    
+    .GameArea {
+      grid-area: GameArea;
+      display: flex;
+      flex-direction: column;
+      align-content: stretch;
+      margin: 1em 1em 0 1em;
+
+      .activity {
+        flex-grow: 1;
+        
+        border: 2px solid $blue;
+      }
+
+      .handContainer {
+
+      }
     }
   }
-
-  
 }
