--- a/src/components/InputBox/InputBox.module.scss
+++ b/src/components/InputBox/InputBox.module.scss
@@ -32,7 +32,7 @@
     position: relative;
     width: 4px;
     height: 50px;
-
+    
     transition: all .3s ease-in-out;
   
     &.active {
@@ -50,7 +50,8 @@
         font-family: $roboto;
         color: $light;
         position: absolute;
-        content: 'Prijava'
+        
+        content: attr(data-content);
       }
     }
 
