--- a/src/components/Pages/GamePage/GamePage.module.scss
+++ b/src/components/Pages/GamePage/GamePage.module.scss
@@ -13,14 +13,14 @@
 
       display: grid;
       grid-template-columns: 1.5fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr; 
-      grid-template-rows: 0.5fr 1fr 0.5fr 1fr 1fr 1fr; 
+      grid-template-rows: 1fr 1fr 1fr 0.5fr 1fr 1fr 1fr; 
       gap: 0px 0px;
       grid-auto-flow: row;
       grid-template-areas:
         "SidebarArea TopLeftPlayer . . TopPlayer . . TopRightPlayer"
         "SidebarArea . GameArea GameArea GameArea GameArea GameArea ."
-        "SidebarArea LeftPlayer GameArea GameArea GameArea GameArea GameArea RightPlayer"
         "SidebarArea . GameArea GameArea GameArea GameArea GameArea ."
+        "SidebarArea LeftPlayer GameArea GameArea GameArea GameArea GameArea RightPlayer"
         "SidebarArea . GameArea GameArea GameArea GameArea GameArea ."
         "SidebarArea . GameArea GameArea GameArea GameArea GameArea ."
         "SidebarArea HandArea HandArea HandArea HandArea HandArea HandArea HandArea";
