--- a/src/components/Pages/GamePage/GamePage.module.scss
+++ b/src/components/Pages/GamePage/GamePage.module.scss
@@ -28,7 +28,9 @@
     
     .SidebarArea {
       grid-area: SidebarArea;
-      
+
+      position: relative;
+
       background: $lightBlue;
     }
 
