--- a/src/components/Pages/GamePage/GamePage.module.scss
+++ b/src/components/Pages/GamePage/GamePage.module.scss
@@ -34,36 +34,40 @@
       background: $lightBlue;
     }
 
-    .TopLeftPlayer, .TopPlayer, .TopRightPlayer {
+    .player {
+      &:nth-of-type(1) {
+        grid-area: LeftPlayer;
+
+        margin-left: 1em;
+      }
+
+      &:nth-of-type(2) {
+        grid-area: TopPlayer;
+
+        margin-top: 1em;
+      }
+
+      &:nth-of-type(3) {
+        grid-area: RightPlayer;
+
+        margin-right: 1em;
+      }
+    }
+
+    .playerOfThree {
       margin-top: 1em;
-    }
 
-    .TopRightPlayer, .RightPlayer {
-      margin-right: 1em;
-    }
+      &:nth-of-type(1) {
+        grid-area: TopLeftPlayer;
 
-    .TopLeftPlayer, .LeftPlayer {
-      margin-left: 1em;
-    }
+        margin-left: 1em;
+      }
 
-    .TopLeftPlayer {
-      grid-area: TopLeftPlayer;
-    }
-    
-    .TopPlayer {
-      grid-area: TopPlayer;
-    }
+      &:nth-of-type(2) {
+        grid-area: TopRightPlayer;
 
-    .TopRightPlayer {
-      grid-area: TopRightPlayer;
-    }
-    
-    .LeftPlayer {
-      grid-area: LeftPlayer;
-    }
-    
-    .RightPlayer {
-      grid-area: RightPlayer;
+        margin-right: 1em;
+      }
     }
     
     .GameArea {
