--- a/src/components/Pages/GamePage/GamePage.module.scss
+++ b/src/components/Pages/GamePage/GamePage.module.scss
@@ -69,6 +69,51 @@
         margin-right: 1em;
       }
     }
+
+    .playerWrapper {
+      position: relative;
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      align-items: center;
+
+      padding: 1em;
+
+      >p {
+        flex-grow: 1;
+        margin: 0;
+
+        font-family: $roboto;
+
+        &.name {
+          font-size: 2em;
+          width: 100%;
+          padding-bottom: 0.25em;
+        }
+
+        &.radelci {
+          text-align: right;
+          font-size: 0.9em;
+        }
+
+        &.score {
+          font-size: 1.2em;
+        }
+      }
+    }
+
+    .activity {
+      box-sizing: border-box;
+      width: 100%;
+      color: $white;
+      background: $darkGrey;
+      text-transform: capitalize;
+      padding: 1em;
+      margin: 0;
+
+      font-family: $roboto;
+      letter-spacing: 1px;
+    }
     
     .GameArea {
       grid-area: GameArea;
