--- a/src/components/Pages/Error404Page/Error404Page.module.scss
+++ b/src/components/Pages/Error404Page/Error404Page.module.scss
@@ -4,5 +4,13 @@
     padding: 5em 1em;
     margin: 0 auto;
     max-width: 1200px;
+    
+    a {
+      text-decoration: none;
+    }
+
+    >div:first-child {
+      margin-bottom: 2em;
+    }
   }
 }
