--- a/src/components/Pages/LoginPage.module.scss
+++ b/src/components/Pages/LoginPage.module.scss
@@ -1,4 +1,4 @@
-@import '../../../variables';
+@import '../../variables';
 
 .wrapper {
   background: $light;
@@ -22,21 +22,5 @@
         border-bottom: 5px solid $blue;
       }
     }
-
-    >div:first-of-type {
-      margin-bottom: 2em;
-    }
-
-    .flex {
-      display: flex;
-      flex-wrap: nowrap;
-      margin-bottom: 3.5em;
-    }
-  }
-}
-
-@media only screen and (max-width: 768px) {
-  .container {
-    padding: 0 1em;
   }
 }
