--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,5 @@
+@import './variables';
+
 @font-face {
   font-family: 'Lato';
   src: url('../public/fonts/Lato/Lato-Thin.ttf'),
@@ -22,14 +24,10 @@ body {
   font-weight: 400;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-
-  background-color: #F6F3EE;
 }
 
 #root {
   height: 100%;
-
-  background: red;
 }
 
 /* normalize.css styles */
