--- a/src/_mixins.scss
+++ b/src/_mixins.scss
@@ -4,4 +4,7 @@
   font-family: $fontFamily;
   font-size: $fontSize;
   font-weight: $fontWeight;
+
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
