--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,5 @@
 @import './variables';
+@import './mixins';
 
 @font-face {
   font-family: 'Lato';
@@ -20,10 +21,7 @@ html, body {
 }
 
 body {
-  font-family: 'Lato', sans-serif;
-  font-weight: 400;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  @include font();
 }
 
 #root {
