Add margin variables

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -10,8 +10,14 @@ $red:      #DB3A34;
 $lato: 'Lato', sans-serif;
 $roboto: 'Roboto Slab', serif;
 
-$fontSizeSmall: 16px;
+$fontSizeSmall:   16px;
 $fontSizeRegular: 18px;
-$fontSizeLarge: 24px;
-$fontSizeXL: 30px;
-$fontSizeXXL: 36px;
+$fontSizeLarge:   24px;
+$fontSizeXL:      30px;
+$fontSizeXXL:     36px;
+
+$marginSmall:   8px;
+$marginDefault: 16px;
+$marginLarge:   24px;
+$marginXL:      30px;
+$marginXXL:     40px;
