Refactor Card and Hand

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -21,3 +21,7 @@ $marginDefault: 16px;
 $marginLarge:   24px;
 $marginXL:      30px;
 $marginXXL:     40px;
+
+$screenSmall: 576px;
+$screenMedium: 768px;
+$screen-lg: 992px;
