Use flex-end isntead of end

--- a/src/components/Hand/Hand.scss
+++ b/src/components/Hand/Hand.scss
@@ -9,7 +9,7 @@
   .hand-container {
     display: flex;
     justify-content: center;
-    align-items: end;
+    align-items: flex-end;
     width: 100%;
     margin-bottom: -3%;
 
